# slurm2sql

./: .gitignore  .travis.yml  LICENSE  README.rst  deidentify.py  pyproject.toml  setup.py  slurm2sql.py  test.py
.github/workflows/: pyrelease.yaml  pytest.yml
tests/: test-data1.csv  test-data1.txt  test-data2.csv  test-data2.txt  test-data3.csv
