[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "slurm2sql"

[project]
name = "slurm2sql"
authors = [{name = "Richard Darst"}]
readme = "README.rst"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    ]
keywords = ["slurm", "sqlite3"]
requires-python = ">=3.6"
dynamic = ["version", "description"]
dependencies = [
    "tabulate",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
    slurm2sql = "slurm2sql:main"
    slurm2sql-sacct = "slurm2sql:sacct_cli"
    slurm2sql-seff = "slurm2sql:seff_cli"
    sacct2 = "slurm2sql:sacct_cli"
    seff2 = "slurm2sql:seff_cli"

[project.urls]
Repository = "https://github.com/NordicHPC/slurm2sql"
#Documentation = "https://example.com/"


# https://flit.pypa.io/en/latest/upload.html
# flit build
# You need to configure a .pypirc file for test upload, or use environment variables:
# https://flit.pypa.io/en/latest/upload.html#using-pypirc
# flit publish --repository testpypi
# or:   FLIT_INDEX_URL=https://test.pypi.org/legacy/ FLIT_USERNAME=xxx and FLIT_PASSWORD=xxx flit publish
# flit publish
